# codeBeautifier

./: CMakeLists.txt  README.md  main.cpp
examples/poetryTicTacToe/input/: command.txt  ticTacToe.cpp
examples/poetryTicTacToe/output/: Definitions.h  beautiful_ticTacToe.cpp
examples/shrek/input/: commands.txt  shrek.cpp
examples/shrek/output/: beautiful_shrek.cpp
res/: helloWorld.cpp  text.txt  text2.txt
src/: ArgumentFactory.cpp  ArgumentFactory.h  Arguments.h  ArrObj.h  Beautifier.cpp  Beautifier.h  CMakeLists.txt  CodeObj.cpp  CodeObj.h  EvenerOuter.cpp  EvenerOuter.h  KeyWordTries.cpp  KeyWordTries.h  TernaryTrie.cpp  TernaryTrie.h  TextObj.cpp  TextObj.h  main.cpp
test/: CMakeLists.txt  testsetup.cpp
test/res/: helloWorld.cpp
test/res/codeTestFiles/: test3.cpp
test/res/createTestFiles/: code1.cpp  code1_r.cpp  code1_r.txt  code2.cpp  code2_r.cpp  code3_r.cpp  text1.txt  text1_r.txt  text2.txt  text2_r.txt  text3.txt  text3_r.txt
test/res/textTestFiles/: test1.txt  test10.txt  test2.txt  test4.txt  test5.txt  test8.txt  test9.txt
test/res/uniquifyTestFiles/: test3.txt  test5.txt  test6.txt
test/tests/: ArrObjBasicTest.cpp  ArrObjCreateTest.cpp  CMakeLists.txt  CodeObjBasicTest.cpp  CodeObjExpandCondenseTest.cpp  TernaryTrieTest.cpp  TextObjBasicTest.cpp  TextObjCondenseTest.cpp  TextObjParamTest.h  TextObjUniquifyTest.cpp  testsetup.cpp
test/tests/argumentTests/: ArgumentFactoryTest.cpp
test/tests/arrObjTests/: ArrObjBasicTest.h
test/tests/codeObjTests/: CodeObjBasicTest.cpp  CodeObjExpandTest.cpp
test/tests/textObjTests/: TextObjBasicTest.cpp  TextObjCondenseTest.cpp  TextObjParamTest.h  TextObjUniquifyTest.cpp
